[workspace]
members = [".", "core", "executors/*"]
resolver = "3"

[package]
name = "spawn-std"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0 OR EUPL-1.2"
readme = "README.md"
repository = "https://github.com/neeko-cat/spawn-std"
keywords = ["async"]
description = "Helper traits for spawning asynchronous tasks while letting the user choose the runtime."

[dependencies]
spawn-std-core = { version = "0.1.0-alpha.1", path = "core" }
spawn-std-async-std = { version = "0.1.0-alpha.1", path = "executors/async-std", optional = true }
spawn-std-smol-1 = { version = "0.1.0-alpha.1", path = "executors/smol-1", optional = true }
spawn-std-smol-2 = { version = "0.1.0-alpha.1", path = "executors/smol-2", optional = true }
spawn-std-tokio = { version = "0.1.0-alpha.1", path = "executors/tokio", optional = true }

[features]
async-std = ["dep:spawn-std-async-std"]
smol_1 = ["dep:spawn-std-smol-1"]
smol_2 = ["dep:spawn-std-smol-2"]
tokio = ["dep:spawn-std-tokio"]
