[package]
name = "spawn-std-smol-2"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0 OR EUPL-1.2"
repository = "https://github.com/neeko-cat/spawn-std"
keywords = ["async"]
description = "smol v2 implementation for spawn-std"

[dependencies]
spawn-std-core = { version = "0.1.0-alpha.1", path = "../../core" }
smol = "2"
